# parametric-curve

./: main.js  package-lock.json  package.json  vite.config.js
rs/src/: curve.rs
src/: index.html  main.js  style.css
wasm/: Cargo.toml
wasm/src/: lib.rs  point.rs  renderer.rs
