[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.61"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'NodeList',
    'Window',
    'CanvasRenderingContext2d',
    'HtmlInputElement',
    'HtmlCanvasElement',
    'console',
]